# python-ai-lab

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml  python-ai-lab.slnx
AiLearning/: AILearning.pyproj  AiLearning.slnx
AiLearning/LangChain/: LangChain.pyproj
AiLearning/OpenAI/: OpenAI.pyproj
AiLearning/Rag/: AskWithRagContext.py  ChunkFilesIntoCosmos.py  RAG.pyproj
AiLearning/VectorDatabases/: VectorDatabases.pyproj
AiLearning/WIP/: WIP.pyproj
PromptEngineering/Rag/: CallToDoQuestionAndUseRag.py  CallToInsertChunksIntoCosmos.py
agent_framework/: agent_framework.pyproj  run_agent_streaming.py
agent_framework_lab/: agent_framework_lab.pyproj  agent_memory_persistence.py  agent_multi_turn_chat.py  agent_non_streaming.py  agent_streaming.py  agent_streaming_chat.py  agent_with_tools.py
ai-experiments/: AILearning.pyproj  ai-experiments.slnx  pyproject.toml  settings.ini
ai-experiments/LangChain/: LangChain.pyproj
ai-experiments/MicrosoftAgentFramework/: MicrosoftAgentFramework.py  MicrosoftAgentFramework.pyproj  RunAgentNonStreaming.py
ai-experiments/RAG/: AskWithRagContext.py  ChunkFilesIntoCosmos.py  RAG.pyproj
ai-experiments/VectorDatabases/: VectorDatabases.pyproj
ai-experiments/WIP/: WIP.pyproj
langchain_lab/: langchain_lab.pyproj
openai_lab/: openai.pyproj  openai_lab.pyproj
rag/: rag.pyproj  setup_cosmos_vector_container.py
vector_databases/: insert_embeddings.py  query_vectorial_db.py  vector_databases.pyproj
