[tool.poetry]
name = "AiExperiments"
version = "0.4.0"
description = "Ejemplos de uso programaticos para aprender AI"
authors = ["Mario Codes <mariocodes1993@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "VectorDatabases" },
	{ include = "OpenAI" },
	{ include = "RAG" },
	{ include = "LangChain" },
]

[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "^1.2.1"
dotenv = "^0.9.9"
pandas = "^2.3.3"
openai = "^2.11.0"
langchain-openai = "^1.1.7"
langchain = "^1.2.3"
azure-cosmos = "^4.15.0"
pypdf = "^6.7.5"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.1"
langchain-experimental = "^0.4.1"

[tool.poetry.scripts]
langchain = "LangChain.LangChain:main"
langchain-lcel = "LangChain.LangChainExpressionLanguage:main"

call-to-openai = "OpenAI.CallToOpenAI:main"

setup-cosmosdb-for-rag = "RAG.SetupCosmosVectorContainer:main"
insert-rag-files = "RAG.ChunkFilesIntoCosmos:main"
ask-rag-question = "RAG.AskWithRagContext:main"

insert-manual-embeddings = "VectorDatabases.InsertEmbeddings:main"
query-manual-embeddings = "VectorDatabases.QueryVectorialDB:main"

manually-get-embeddings = "WIP.ManualCallToGetEmbeddingsFromText:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
